	  work before???)
	* fixed a deadlock in adding new (unknown) character encodings in
	  include/qore/charset.h
	* fixed a bug in the QoreString::vsprintf() design and usage (retries
	  when the buffer was too small would cause a segfault)
	* set library and module dir to use lib64 for 64-bit builds on Linux
	* changes to allow mysql to be compiled in for Linux x86_64

2006.07.09: David Nichols
	* added TibrvListener class to the tibco module for TIBCO Rendezvous 
	  listening
	* changed DateTime <-> integer conversions to be based on the number of
	  seconds from January 1, 1970 (the UNIX epoch)

2006.07.08: David Nichols
	* FtpClient updated to understand the "ftps://" protocol as per RFC-2228
	  and RFC-4217: for AUTH TLS secure logins implemented
	* FtpClient updated to use secure data connections using PBSZ 0 and 
	  PROT P as per RFC-4217
	* new FtpClient methods:
	  + FtpClient::setSecure()
	  + FtpClient::setInsecure()
	  + FtpClient::setInsecureData()
	  + FtpClient::isSecure()
	  + FtpClient::isDataSecure()
	  + FtpClient::getSSLCipherName()
	  + FtpClient::getSSLCipherVersion()
	  + FtpClient::verifyPeerCertificate()
	  + FtpClient::setModeAuto()
	  + FtpClient::setModeEPSV()
	  + FtpClient::setModePASV()
	  + FtpClient::setModePORT()
	* added digest and crypto tests to test/test.q
	* corrected regular expressions for XML-RPC method names in 
	  examples/XmlRpcServerValidation.q
	* eliminated rare but stupid race condition in the Socket class
	* added des_random_key() function to lib/ql_crypto.cc
	* removed all code checking if a QoreString has no encoding - all 
	  QoreStrings must have an encoding set

2006.07.07: David Nichols
	* added MD2(), MD4(), MD5(), SHA(), SHA1(), DSS(), DSS1(), RIPEMD160()
	  digest functions to lib/ql_crypto.cc
	* added MDC2() digest function to lib/ql_crypto.cc optionally depending
	  on openssl library support
	* added the following cryptographic functions to lib/ql_crypto.cc:
          + des_encrypt_cbc()