@@ -106,8 +106,11 @@ endif
 endif
 
 if COND_MONOLITHIC
-if COND_TIBCO
-libqore_la_LIBADD += ../modules/TIBCO/libtibco.la
+if COND_TIBRV
+libqore_la_LIBADD += ../modules/TIBCO/libtibrv.la
+endif
+if COND_TIBAE
+libqore_la_LIBADD += ../modules/TIBCO/libtibae.la
 endif
 if COND_ORACLE
 libqore_la_LIBADD += ../modules/oracle/liboracle.la
