@@ -29,52 +29,42 @@
 #include <qore/module.h>
 #include <qore/ModuleManager.h>
 
-#include "QC_TibrvListener.h"
-#include "tibco-module.h"
-#include "tibco.h"
+#include "tibae-module.h"
+#include "tibae.h"
 
 #include <string.h>
 
 #ifndef QORE_MONOLITHIC
-char qore_module_name[] = "tibco";
-char qore_module_version[] = "0.1";
-char qore_module_description[] = "TIBCO integration module";
+char qore_module_name[] = "tibae";
+char qore_module_version[] = "0.2";
+char qore_module_description[] = "TIBCO Active Enterprise module";
 char qore_module_author[] = "David Nichols";
 char qore_module_url[] = "http://qore.sourceforge.net";
 int qore_module_api_major = QORE_MODULE_API_MAJOR;
 int qore_module_api_minor = QORE_MODULE_API_MINOR;
-qore_module_init_t qore_module_init = tibco_module_init;
-qore_module_ns_init_t qore_module_ns_init = tibco_module_ns_init;
-qore_module_delete_t qore_module_delete = tibco_module_delete;
+qore_module_init_t qore_module_init = tibae_module_init;
+qore_module_ns_init_t qore_module_ns_init = tibae_module_ns_init;
+qore_module_delete_t qore_module_delete = tibae_module_delete;
 #endif
 
-int tibco_module_init()
+int tibae_module_init()
 {
-   // initialize rendezvous
-   TibrvStatus status = Tibrv::open();
-   if (status != TIBRV_OK)
-   {
-       fprintf(stderr, "ERROR: cannot open TIB/RV: status=%d: %s\n", (int)status, status.getText());
-       return 1;
-   }
    return 0;
 }
 
-void tibco_module_ns_init(class Namespace *rns, class Namespace *qns)
+void tibae_module_ns_init(class Namespace *rns, class Namespace *qns)
 {
-   tracein("tibco_module_ns_init()");
-   class Namespace *tibns = new Namespace("TIBCO");
+   tracein("tibae_module_ns_init()");
+   class Namespace *tibns = new Namespace("TIBAE");
    tibns->addSystemClass(initTibcoAdapterClass());
-   tibns->addSystemClass(initTibrvListenerClass());
    qns->addInitialNamespace(tibns);
 
-   traceout("tibco_module_nsinit()");
+   traceout("tibae_module_nsinit()");
 }
 
-void tibco_module_delete()
+void tibae_module_delete()
 {
-   tracein("tibco_module_delete()");
-   Tibrv::close();
-   traceout("tibco_module_delete()");
+   tracein("tibae_module_delete()");
+   traceout("tibae_module_delete()");
 }
 
